--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
         </div>
         <div class="banking">
             <p>Internet Bankciliq</p>
-            <i id="fa-bars" class="fa-solid fa-2x fa-bars"></i>
+            <div class="menu-bar">
+                <p id="fa-bars"><i class="fa-solid fa-2x fa-bars"></i></p>
+                <p  id="fa-xmark" ><i class="fa-solid fa-2x fa-xmark"></i></p>
+            </div>
         </div>
     </div>
     <hr>
@@ -54,7 +57,7 @@
         <div class="int-bank">
             <p>Internet Bankciliq</p>
         </div>
-        <ul class="ul">
+        <ul class="all-ul">
             <li class="sec-li">Tender elanlari</li>
             <li class="sec-li">Haqqimizda</li>
             <li class="sec-li">Tarifler</li>
